Fix z-index bug w/ animation on home (#28).

--- a/client/src/style/global.scss
+++ b/client/src/style/global.scss
@@ -237,15 +237,33 @@ form {
   @include pxtoem(24, 48);
 }
 
+@mixin aos-transition {
+
+  @include transition(all, 1.5s, ease-in-out);
+  transition-duration: 1.5s !important;
+
+}
 
 // AOS shape animations
+[data-aos="get-involved"] {
+
+  @include aos-transition();
+  transform: translate(-55%, 0);
+  
+  transform-style: preserve-3d;
+  opacity: 0;
+  
+  &.aos-animate {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
 [data-aos="circle-purple"] {
+
+  @include aos-transition();
+
   transform: scale(0, 0);
   transform-origin: 20% 50%;
-
-  transition-property: transform, opacity;
-  transition-timing-function: ease-in-out;
-  transition-duration: 1.5s !important;
 
   opacity: 0;
 
@@ -256,9 +274,8 @@ form {
 }
 
 [data-aos="shapes"] {
-  transition-property: all;
-  transition-timing-function: ease-in-out;
-  transition-duration: 1.5s !important;
+
+  @include aos-transition();
 
   clip-path: ellipse(0% 0% at 50% 50%);
 
@@ -268,12 +285,10 @@ form {
 }
 
 [data-aos="purple-circle"] {
+
+  @include aos-transition();
+
   transform: translate(25%, -105%);
-
-  transition-property: transform, opacity;
-  transition-timing-function: ease-in-out;
-  transition-duration: 1.5s !important;
-
   opacity: 0;
 
   &.aos-animate {
@@ -284,13 +299,12 @@ form {
 
 [data-aos="red-torus"] {
 
-    display: block;
 
-    @include transition(all, 1.5s, ease-in-out);
-    transition-duration: 1.5s !important;
-    
-    @include translate(-15%, 20%);
-    opacity: 0;
+  display: block;
+
+  @include aos-transition();
+  @include translate(-15%, 20%);
+  opacity: 0;
 
   &.aos-animate {
     opacity: 1;
@@ -300,8 +314,7 @@ form {
 
 [data-aos="squiggle"] {
 
-  @include transition(all, 1.5s, ease-in-out);
-  transition-duration: 1.5s !important;
+  @include aos-transition();
 
   clip-path: inset(0% 100% 0% 0%);
 
@@ -313,8 +326,7 @@ form {
 
 [data-aos="cone"] {
 
-  @include transition(all, 1.5s, ease-in-out);
-  transition-duration: 1.5s !important;
+  @include aos-transition();
 
   clip-path: polygon(29% 100%, 60% 100%, 100% 100%, 0% 100%);
 
